<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Penca</string>
    <string name="penca_text">Penca</string>
    <string name="detalle_partido_text">Detalle partido</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Buscar</string>
    <string name="accerted">Acertado</string>
    <string name="matchs">Partidos</string>
    <string name="missed">Errado</string>
    <string name="played_with_no_result">Jugado s/resultado</string>
    <string name="see_details_text" tools:ignore="ExtraTranslation">Ver detalles</string>
    <string name="nothing_found">No se encontró nada!</string>
    <string name="confirm">Confrimar</string>
    <string name="cancel">Cancelar</string>
    <string name="dialog_title">Goles</string>
    <string name="see_details">Ver detalles</string>
    <string name="match_filter">Filtrar partidos</string>
    <string name="see_all">Ver todos</string>
    <string name="see_accerted">Ver acertados</string>
    <string name="see_wrong">Ver errados</string>
    <string name="see_played_not_bet">Ver jugados s/resultado</string>
    <string name="filter">Filtrar</string>
    <string name="see_pending">Ver pendientes</string>
    <string name="log_in_title">Ingresar a tu cuenta</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="log_in">Ingresar</string>
    <string name="dont_have_account">¿No tienes cuenta?</string>
    <string name="register">Registrate</string>
    <string name="already_account_text">¿Ya tienes una cuenta?</string>
    <string name="create">Crear</string>
    <string name="create_account">Crear cuenta</string>
    <string name="invalid_email">Dirección de correo inválida</string>
    <string name="must_enter_password">Debes ingresar una contraseña de al menos 8 caracteres</string>
    <string name="shared_preferences_name">PencaPreferences</string>
    <string name="pending">Pending</string>
</resources>