<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/action_bar_background">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="56dp"
            android:fontFamily="@font/lato"
            android:text="@string/create_account"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/email_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/lato"
            android:text="@string/email"
            android:textColor="@color/grey_log_in"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@id/title"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <EditText
            android:id="@+id/email_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="48dp"
            android:background="@drawable/background_input_log_in"
            android:fontFamily="@font/lato"
            android:paddingVertical="10dp"
            android:paddingStart="16dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/title"
            app:layout_constraintTop_toBottomOf="@id/email_text" />

        <TextView
            android:id="@+id/password_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/lato"
            android:inputType="textEmailAddress"
            android:text="@string/password"
            android:textColor="@color/grey_log_in"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@id/title"
            app:layout_constraintTop_toBottomOf="@id/email_input" />

        <EditText
            android:id="@+id/password_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="48dp"
            android:background="@drawable/background_input_log_in"
            android:fontFamily="@font/lato"
            android:inputType="textPassword"
            android:paddingVertical="10dp"
            android:paddingStart="16dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/title"
            app:layout_constraintTop_toBottomOf="@id/password_text" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/background_log_in_button"
            android:fontFamily="@font/lato"
            android:foreground="?android:attr/selectableItemBackground"
            android:paddingHorizontal="40dp"
            android:paddingVertical="12dp"
            android:text="@string/create"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/title"
            app:layout_constraintTop_toBottomOf="@id/password_input" />

        <TextView
            android:id="@+id/already_account_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/lato"
            android:text="@string/already_account_text"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@id/title"
            app:layout_constraintTop_toBottomOf="@id/register_button" />

        <TextView
            android:id="@+id/log_in_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:padding="8dp"
            android:text="Ingresá"
            android:textColor="@color/color_register_text"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@id/already_account_text"
            app:layout_constraintStart_toEndOf="@id/already_account_text"
            app:layout_constraintTop_toTopOf="@id/already_account_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>