<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/background_dialog">

            <TextView
                android:id="@+id/dialog_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato"
                android:paddingVertical="12dp"
                android:text="@string/match_filter"
                android:textAlignment="center"
                android:textColor="@color/color_title_dialog"
                android:textSize="13sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/separator_title_see_all"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_dialog_separator"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dialog_title" />

            <Button
                android:id="@+id/see_all_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato"
                android:paddingVertical="18dp"
                android:text="@string/see_all"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:background="?android:selectableItemBackground"
                android:textColor="@color/color_text_dialog_not_selected"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/separator_title_see_all" />

            <View
                android:id="@+id/separator_see_all_see_accerted"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_dialog_separator"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/see_all_text" />

            <Button
                android:id="@+id/see_accerted_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato"
                android:paddingVertical="18dp"
                android:text="@string/see_accerted"
                android:textAlignment="center"
                android:textColor="@color/color_text_dialog_not_selected"
                android:textSize="20sp"
                android:textAllCaps="false"
                android:background="?android:selectableItemBackground"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/separator_see_all_see_accerted" />

            <View
                android:id="@+id/separator_see_accerted_see_wrong"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_dialog_separator"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/see_accerted_text" />

            <Button
                android:id="@+id/see_wrong_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato"
                android:paddingVertical="18dp"
                android:text="@string/see_wrong"
                android:textAlignment="center"
                android:textColor="@color/color_text_dialog_not_selected"
                android:textSize="20sp"
                android:textAllCaps="false"
                android:background="?android:selectableItemBackground"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/separator_see_accerted_see_wrong" />

            <View
                android:id="@+id/separator_see_wrong_see_pending"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_dialog_separator"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/see_wrong_text" />

            <Button
                android:id="@+id/see_pending_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato"
                android:paddingVertical="18dp"
                android:text="@string/see_pending"
                android:textAlignment="center"
                android:textColor="@color/color_text_dialog_selected"
                android:textSize="20sp"
                android:textAllCaps="false"
                android:background="?android:selectableItemBackground"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/separator_see_wrong_see_pending" />

            <View
                android:id="@+id/separator_see_pending_see_not_bet"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_dialog_separator"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/see_pending_text" />

            <Button
                android:id="@+id/see_not_bet_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato"
                android:paddingVertical="18dp"
                android:text="@string/see_played_not_bet"
                android:textAlignment="center"
                android:textColor="@color/color_text_dialog_not_selected"
                android:textSize="20sp"
                android:textAllCaps="false"
                android:background="?android:selectableItemBackground"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/separator_see_pending_see_not_bet" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/filter_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/background_dialog_confirm_button"
            android:paddingVertical="18dp"
            android:text="@string/filter"
            android:foreground="?android:attr/selectableItemBackground"
            android:textAllCaps="false"
            android:fontFamily="@font/lato"
            android:textColor="@color/color_text_dialog_not_selected"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

</layout>